# lyapunov_exponent_geophysics

./: 01_quickstart_bifurcation.ipynb  02_timeseries_lyapunov_from_csv.ipynb  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  FAQ.md  LICENSE  README.md  SHKODRA_ANNUAL_RAIN_DATA_EMS2023.xlsx  __init__.py  cli.md  environment.yml  io.py  lorenz.py  maps.py  pyproject.toml  radon_data.txt  radon_floor_2_zyra_ifbz.txt  requirements.txt  signal_processing_tests.py
data/: Daily_R_Shkodra_DATE.xlsx  Dip_Mom_4_Myr.mat  Lyapunov_Exponents_Series.xlsx  SHKODRA_Daily_Rain.xlsx  radon_data.txt  radon_floor_1_arkiva_ifbz.txt
data/raw/: PADM2M.xlsx  PE22111010056_LogData.txt  PE22111010058_LogDatagis.txt  PE22111010064_LogData (14) Durres.txt  PISO_1500_VADM.xlsx
docs/: cli.md  excel_input.md  geophysical_cautions.md  index.md  installation.md  methodology.md  methods_lyapunov.md  outputs.md  reproducibility.md  usage.md
examples/: bifurcation_Lorenz_system.py  bifurcation_diagram.py  radon_processing.py
notebooks/: 01_logistic_benchmark.ipynb  01_quickstart_bifurcation.ipynb  02_geophysical_timeseries_template.ipynb  02_timeseries_lyapunov_from_csv.ipynb  README.md
results/geomagnetic/PADM2M/: local_estimates.csv  summary.json
results/geomagnetic/PISO/: local_estimates.csv  summary.json
scripts/: run_lyapgeo.py
src/lyapgeo/: __init__.py  benchmarks.py  cli.py  estimators.py  io.py  plotting.py  preprocessing.py  results.py  statistics.py  workflows.py
src/lyapunov_exponent_geophysics.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/lyapunov_geo/: bifurcation.py  cli.py  lyapunov.py
tests/: test_cli.py  test_estimators.py  test_excel_reader.py  test_radon_parser.py  test_smoke.py
