[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lyapunov-exponent-geophysics"
version = "0.2.0"
description = "Lyapunov exponent estimation and comparison for geophysical time series."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "Klaudio Peqini"}]
keywords = ["Lyapunov exponent", "geophysics", "time series", "chaos", "nonlinear dynamics"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering :: Physics",
]
dependencies = ["numpy>=1.24", "scipy>=1.10", "pandas>=2.0", "matplotlib>=3.7"]

[project.optional-dependencies]
dev = ["pytest>=7.4", "ruff>=0.5", "pre-commit>=3.5"]

[project.scripts]
lyapgeo = "lyapgeo.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "SIM"]
ignore = ["E501"]
